--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="media/css/styles.css">
 
-        <title>TASK 2 Landing Page</title>
+        <title>BEATS</title>
+        <link rel="Icon" type="image/x-icon" href="/media/img/favicon.png">
     </head>
     <body>
         <!--=============== HEADER ===============-->
